Collection does not exist alignment issues and folder title alignment issues resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/collection/footer/footerstyle.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/collection/footer/footerstyle.css
@@ -207,7 +207,7 @@ display:inline-block;
 }
 .textRightMargin{
 	text-align:right;
-	  margin-right: -17px;
+	  margin-right: -27px;
 }
 .endPageIframe iframe{
 	width: 100% !important;
