--- a/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/folders/FolderItemMetaDataUc.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/folders/FolderItemMetaDataUc.css
@@ -32,7 +32,7 @@
 	display: inline-block;
 	padding: 10px 15px;
 	position: relative;
-	margin: 5px 0;
+	margin: -2px 0;
 	color: #999;
 }
 
